fixed tags container not wrapping on work page projects

--- a/src/routes/work/projects/project/project.scss
+++ b/src/routes/work/projects/project/project.scss
@@ -75,6 +75,7 @@
   align-items: center;
   grid-column-gap: 0.6em;
   grid-row-gap: 0.8em;
+  flex-wrap: wrap;
 }
 
 .project-number {
